<resources>
    <string name="app_name">Speed_Match_Android</string>
    <string name="remember_this_image">Remember this image</string>
    <string name="image">Image</string>
    <string name="start_game">Start game</string>
    <string name="score">Score:</string>
    <string name="speed_match">Speed Match</string>
    <string name="match_images">Match images</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="does_this_image_match_the_previous_image">Does this image match the previous image?</string>
    <string name="you_won">You won!</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
</resources>