<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseActivity">

    <TextView
        android:id="@+id/game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/match_images"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        android:layout_above="@id/image_one"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"/>
    <ImageView
        android:id="@+id/image_one"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/baseline_broken_image_24"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/image"
        />
    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_height="wrap_content"
        android:text="@string/does_this_image_match_the_previous_image"
        android:textAlignment="center"
        android:layout_below="@id/image_one"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textStyle="bold | italic"/>
    <Button
        android:id="@+id/yes_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/yes"
        android:layout_margin="0dp"
        android:backgroundTint="@color/right"
        android:layout_above="@id/no_button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true"/>
    <Button
        android:id="@+id/no_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/no"
        android:layout_margin="0dp"
        android:backgroundTint="@color/design_default_color_error"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>