<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:layout_marginTop="20dp"
        android:layout_toStartOf="@id/text_score"
        android:textSize="24sp"
        android:textStyle="bold | italic"/>
    <TextView
        android:id="@+id/text_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 / 10"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:textSize="24sp"
        android:textStyle="bold | italic"/>
    <TextView
        android:id="@+id/winner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginBottom="30dp"
        android:layout_above="@id/game_name"
        android:layout_centerHorizontal="true"
        android:textColor="@color/right"
        android:textSize="40sp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/game_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed_match"
        android:layout_marginBottom="30dp"
        android:layout_above="@id/image_one"
        android:layout_centerHorizontal="true"
        android:textColor="@color/speed_match_color"
        android:textSize="40sp"
        android:textStyle="bold"/>
    <ImageView
        android:id="@+id/image_one"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/baseline_broken_image_24"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/image"
        />
    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_game"
        android:layout_below="@id/image_one"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textStyle="bold | italic"/>
    <Button
        android:id="@+id/start_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/start"
        android:textAllCaps="true"
        android:layout_margin="0dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/reset_button"
        android:layout_alignParentStart="true"/>
    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/reset"
        android:textAllCaps="true"
        android:layout_margin="0dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/design_default_color_error"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>