<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreviewImageActivity">

    <TextView
        android:id="@+id/text_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:layout_marginTop="20dp"
        android:layout_toStartOf="@id/text_score"
        android:textSize="24sp"
        android:textStyle="bold | italic"/>
    <TextView
        android:id="@+id/text_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0 / 10"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:textSize="24sp"
        android:textStyle="bold | italic"/>
    <ImageView
        android:id="@+id/image_one"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/baseline_broken_image_24"
        android:scaleType="fitCenter"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/image"
        />
    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_this_image"
        android:layout_below="@id/image_one"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textStyle="bold | italic"/>

</RelativeLayout>